--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,11 @@
 <html>
     <head>
         <title>
-            JSDJASBCJAS
+            
         </title>
     </head>
 
     <body>
-        <p> hello my name is yash</p>
+        <p> i changed this file </p>
     </body>
 </html>
