--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,6 +7,6 @@
     </head>
 
     <body>
-        <p> i changed this file ascacxacascas </p>
+        <p> i changed this file </p>
     </body>
 </html>
