--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,21 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>
-            
-        </title>
-    </head>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Duraadharshah</title>
+    <link rel="stylesheet" href="/duraadharshah/frontend/CSS/style.css">
+</head>
+<body>
 
-    <body>
-        <p> i am yash </p>
-    </body>
+    <nav>
+        <ul>
+            <li><a href="#">About Us</a></li>
+        </ul>
+        <ul>
+            <li><a href="#">Sign Up</a></li>
+            <li><a href="#">Log In</a></li>
+        </ul>
+    </nav>
+</body>
 </html>
