--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
-
 <html>
-    <head>
-        <title>
 
-        </title>
-    </head>
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login</title>
+    <link rel="stylesheet" href="/duraadharshah/frontend/CSS/login.css" />
+</head>
 
-    <body>
+<body>
+    <div class="container">
+        <form action="#">
+            <h2>Login-form</h2>
+            <div class="input-field">
+                <input type="text" required />
+                <label>Enter email</label>
+            </div>
+            <div class="input-field">
+                <input type="password" required />
+                <label>Enter password</label>
+            </div>
+            <div class="forget">
+                <label for="Save-login">
+                    <input type="checkbox" id="Save-login" />
+                    <p>Save login information</p>
+                </label>
+                <a href="#">Forgot password?</a>
+            </div>
+            <button type="submit">Log In</button>
+            <div class="Create-account">
+                <p>Don't have an account? <a href="#">Create account</a></p>
+            </div>
+        </form>
+    </div>
+</body>
 
-        
-    </body>
 </html>
