--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,7 +14,7 @@
         </ul>
         <ul>
             <li><a href="#">Sign Up</a></li>
-            <li><a href="#">Log In</a></li>
+            <li><a href="/duraadharshah/frontend/login.html">Log In</a></li>
         </ul>
     </nav>
 </body>
